--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.17.0
+  provider: ^6.0.1
+  
 
 
   # The following adds the Cupertino Icons font to your application.
